--- a/Gemma/Views/Cart/GetCart.cshtml
+++ b/Gemma/Views/Cart/GetCart.cshtml
@@ -5,7 +5,8 @@
 }
 
 <table class="cart-with-title" style="width:100%;">
-    <thead style="border-bottom:3px;border-bottom-color:black;">
+
+    <thead style="font-size:20px;border-bottom:2px solid">
         <tr>
             <th>商品</th>
             <th></th>
@@ -16,31 +17,111 @@
 
     </thead>
 
-    <tbody class="cart-with-items">
+    <tbody class="cart-with-items" id="ddd">
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="cart-with-one" style="font-size:15px;border-bottom:1px solid;">
                 <td>
                     <img src="~/Assets/images/Product/@item.CategoryName/@item.ProductName/@item.ColorImg/1.jpg">
                 </td>
                 <td class="cook">
                     <span class="productID" title="@item.ProductID">@item.ProductName</span>
+
                     <br />
-                    <span> @item.CartID</span>
+                    コード:<span class="cartID">@item.CartID</span>
+                    <button class="deleteData">X</button>
                     <br />
-                    <span class="colorID" title="@item.ColorID">@item.ColorName</span>
+                    <span class="colorID" title="@item.ColorID">COLOR:@item.ColorName</span>
                     <br />
-                    <span class="sizeID" title="@item.SizeID">@item.Size</span>
+                    <span class="sizeID" title="@item.SizeID">SIZE:@item.SizeID (@item.Size)</span>
                     <br />
                 </td>
-                <td v-model="price" class="priceForCart">@item.Price</td>
-                <td class="QuantityCart">@*<input v-model="count" value="@item.Quantity">*@@item.Quantity</td>
-                <td>@item.Amount</td>
+                <td class="priceForCart">
+
+                    <span> @item.Price</span>
+                </td>
+                <td>
+                    <button class="QuantityReducing">-</button>
+                    <input class="QuantityCart" value="@item.Quantity" style="width:50px;" />
+                    <button class="QuantityAdding"> +</button>
+                </td>
+                <td class="AmountCart">
+                    <span>@item.Amount</span> 円
+                </td>
+                
             </tr>
+
         }
-
     </tbody>
-</table>
-@*<a href="#" id="checkCart">注文手続きへ</a>*@
-@Html.ActionLink("注文手続きへ", "CheckInfo", "Checkout", new { id = User.Identity.GetUserId() }, new { id = "checkCart" })
 
+</table>
+
+<div class="cartSubtotal container">
+    <ul style="border-bottom:2px solid">
+        <li>
+            <span style="margin-left:70%">小計</span>
+            <span id="itemPrice" style="margin-left:15%"></span>円
+        </li>
+        <li>
+            <span style="margin-left:70%">運費</span>
+            <span style="margin-left:15%">500円</span>
+        </li>
+        <li>
+            <span style="margin-left:70%">含稅</span>
+            <span id="itemPriceTax" style="margin-left:15%"></span>円
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <span style="margin-left:70%">總計</span>
+            <span id="cartitemTotal" style="margin-left:15%"></span>円
+        </li>
+    </ul>
+</div>
+
+<div>
+    <a href="@Url.Action("FindBrand","OnlineStore")">買い物を続ける</a>
+
+    @*<a href="#" id="checkCart">注文手続きへ</a>*@
+    @Html.ActionLink("注文手続きへ", "CheckInfo", "Checkout", new { id = User.Identity.GetUserId() }, new { id = "checkCart" })
+</div>
+
+
+@*<script>
+    function CartTotal() {
+        $('#cartitemTotal').html('總計:'$('#itemPrice').html()+500+$('#itemPrice').html());
+    }
+    function ItemToTax() {
+        $('#itemPriceTax').html($('#itemPrice').html() * 0.05);
+    }
+    function ItemToPrice() {
+        $('#itemPrice').html($('.AmountCart').html());
+    }
+
+    </script>*@
+
+
+@*@section endJS{
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>
+        <script>
+            function BindingOneItem() {
+                new Vue({
+                    el: "#ddd",
+                    data: {
+                        count: 1,
+                        price: 1
+                    },
+                    computed: {
+                        oneItemTotal: function () {
+                            var total = this.$data.count * this.$data.price;
+                            return total;
+                        }
+                    },
+                })
+            }
+            $(function () {
+                BindingOneItem();
+
+            });
+        </script>
+    }*@
