--- a/Gemma/Views/Checkout/CheckInfo.cshtml
+++ b/Gemma/Views/Checkout/CheckInfo.cshtml
@@ -5,7 +5,9 @@
     ViewBag.Title = "注文手続き - Daniella & GEMMA（ダニエラ＆ジェマ）オンラインストア";
     var unorderCart = (List<CartViewModel>)Session["unorderCart"];
     decimal amount = 0;
+    decimal withTax = 0;
     var totalgoods = 0;
+
 }
 
 <div class="container">
@@ -83,14 +85,19 @@
                 <h4 style="padding-bottom : 0" class="smallTitle">注文の概要</h4>
                 <hr />
                 @foreach (var goods in unorderCart)
-                    {
-                        amount += goods.Amount;
-                        totalgoods += 1;
-                    }
+                {
+                    amount += goods.Amount;
+                    withTax = goods.AmountwithTax;
+                    totalgoods += 1;
+                }
                 <div class="col-12">
                     <div class="row">
                         <div class="col-7">@totalgoods 個</div>
                         <div class="col-5">@amount 円</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-7">運費 : 500 円</div>
+                        <div class="col-5">小計 : @withTax 円</div>
                     </div>
                 </div>
                 <h4 class="smallTitle">カート内の商品</h4>
@@ -105,32 +112,32 @@
                     </ul>
                     <br />
                 }
-                </div>
             </div>
         </div>
     </div>
+</div>
 
 
-    <link href="~/Assets/CSS/FixedMenu.css" rel="stylesheet" />
-    <link href="~/Assets/CSS/MemberCenter.css" rel="stylesheet" />
+<link href="~/Assets/CSS/FixedMenu.css" rel="stylesheet" />
+<link href="~/Assets/CSS/MemberCenter.css" rel="stylesheet" />
 
-    @section topCSS{
-        <style>
-            .menber_content * {
-                margin-bottom: 15px;
-                font-size: 15px;
-            }
+@section topCSS{
+    <style>
+        .menber_content * {
+            margin-bottom: 15px;
+            font-size: 15px;
+        }
 
-            hr {
-                height: 8px;
-                border: 0;
-                box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
-            }
-        </style>
-    }
+        hr {
+            height: 8px;
+            border: 0;
+            box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
+        }
+    </style>
+}
 
-    @section endJS{
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+@section endJS{
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
-    <script src="~/Assets/js/FixedMenuForIG.js"></script>
+<script src="~/Assets/js/FixedMenuForIG.js"></script>
