--- a/Gemma/Views/MemberCenter/MemberInfo.cshtml
+++ b/Gemma/Views/MemberCenter/MemberInfo.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center align-items-center">
         <br />
         <div class="col-md-offset-4 topButton">
             <input type="button" value="会員情報の編集" class="btn btnDonC" id="memberInformation" />
