--- a/Gemma/Views/Cart/CartView.cshtml
+++ b/Gemma/Views/Cart/CartView.cshtml
@@ -151,7 +151,8 @@
                     dataType: "text",
                     success: function (response) {
                         console.log(response);
-                    }
+                    },
+                    async:false
                 });
             });
         })
