--- a/Gemma/Views/Home/DaniellaGemma.cshtml
+++ b/Gemma/Views/Home/DaniellaGemma.cshtml
@@ -39,17 +39,17 @@
 <div class="OnlineStoreItems container">
     <div class="Item-Header">
         <h1>
-            <a href="#">ITEM</a>
+            <a href="@Url.Action("FindBrand","OnlineStore")">ITEM</a>
         </h1>
         <p>
-            <a href="#">all item</a>
+            <a href="@Url.Action("FindBrand","OnlineStore")">all item</a>
         </p>
     </div>
     <div class="row ItemsRow">
         <div class="ItemsForHotFirst">
             <div class="Itemscontent">
                 <div class="imageRow">
-                    <a href="#"><img src="~/Assets/images/HomePage/ItemImg01.jpg" /></a>
+                    <a href="@Url.Action("FindBrand","OnlineStore")"><img src="~/Assets/images/HomePage/ItemImg01.jpg" /></a>
                 </div>
 
                 <div class="jsForItems">
@@ -69,7 +69,7 @@
         <div class="ItemsForHotSecond">
             <div class="Itemscontent">
                 <div class="imageRow">
-                    <a href="#"><img src="~/Assets/images/HomePage/ItemImg02.jpg" /></a>
+                    <a href="@Url.Action("FindBrand","OnlineStore")"><img src="~/Assets/images/HomePage/ItemImg02.jpg" /></a>
                 </div>
 
                 <div class="jsForItems">
@@ -88,7 +88,7 @@
         <div class="ItemsForHotThird">
             <div class="Itemscontent">
                 <div class="imageRow">
-                    <a href="#"><img src="~/Assets/images/HomePage/ItemImg03.jpg" /></a>
+                    <a href="@Url.Action("FindBrand","OnlineStore")"><img src="~/Assets/images/HomePage/ItemImg03.jpg" /></a>
                 </div>
 
                 <div class="jsForItems">
@@ -108,7 +108,7 @@
         <div class="ItemsForHotFourth">
             <div class="Itemscontent">
                 <div class="imageRow">
-                    <a href="#"><img src="~/Assets/images/HomePage/ItemImg04.jpg" /></a>
+                    <a href="@Url.Action("FindBrand","OnlineStore")"><img src="~/Assets/images/HomePage/ItemImg04.jpg" /></a>
                 </div>
 
                 <div class="jsForItems">
@@ -128,7 +128,7 @@
         <div class="ItemsForHotFifth">
             <div class="Itemscontent">
                 <div class="imageRow">
-                    <a href="#"><img src="~/Assets/images/HomePage/ItemImg05.jpg" /></a>
+                    <a href="@Url.Action("FindBrand","OnlineStore")"><img src="~/Assets/images/HomePage/ItemImg05.jpg" /></a>
                 </div>
                 <div class="jsForItems">
                     <p class="brand">
@@ -150,21 +150,21 @@
 <div class="Journal-Section container-fluid">
     <div class="Journal-Header">
         <h1>
-            <a href="#">Journal</a>
+            <a href="@Url.Action("Index","Journall")">Journal</a>
         </h1>
         <p>
-            <a href="#">all Journal</a>
+            <a href="@Url.Action("Index","Journall")">all Journal</a>
         </p>
     </div>
     <div class="Journal-Body">
         <div class="Journal-Picture">
-            <a href="#">
+            <a href="@Url.Action("Index","Journall")">
                 <img src="~/Assets/images/HomePage/Journal01.jpg" />
             </a>
-            <a href="#">
+            <a href="@Url.Action("Index","Journall")">
                 <img src="~/Assets/images/HomePage/Journal02.jpg" />
             </a>
-            <a href="#">
+            <a href="@Url.Action("Index","Journall")">
                 <img src="~/Assets/images/HomePage/Journal03.jpeg" />
             </a>
         </div>
@@ -174,15 +174,15 @@
 <div class="Collection-Section container">
     <div class="Collection-Header">
         <h1>
-            <a href="#">Collection</a>
+            <a href="@Url.Action("CollectionPhotos","Collection")">Collection</a>
         </h1>
         <p>
-            <a href="#">all Collection</a>
+            <a href="@Url.Action("CollectionPhotos","Collection")">all Collection</a>
         </p>
     </div>
     <div class="Collection-Body">
         <div class="Collection-Picture">
-            <a href="#">
+            <a href="@Url.Action("CollectionPhotos","Collection")">
                 <img src="~/Assets/images/HomePage/Collection.jpg" />
             </a>
         </div>
