--- a/Gemma/Views/Shared/_Footer.cshtml
+++ b/Gemma/Views/Shared/_Footer.cshtml
@@ -15,22 +15,22 @@
             <div class="instagram-list">
                 <ul>
                     <li>
-                        <a href="#"><img src="~/Assets/images/HomePage/IGImg01.jpg" /></a>
+                        <a href="https://www.instagram.com/daniella_and_gemma/"><img src="~/Assets/images/HomePage/IGImg01.jpg" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="~/Assets/images/HomePage/IGImg02.jpg" /></a>
+                        <a href="https://www.instagram.com/daniella_and_gemma/"><img src="~/Assets/images/HomePage/IGImg02.jpg" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="~/Assets/images/HomePage/IGImg03.jpg" /></a>
+                        <a href="https://www.instagram.com/daniella_and_gemma/"><img src="~/Assets/images/HomePage/IGImg03.jpg" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="~/Assets/images/HomePage/IGImg04.jpg" /></a>
+                        <a href="https://www.instagram.com/daniella_and_gemma/"><img src="~/Assets/images/HomePage/IGImg04.jpg" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="~/Assets/images/HomePage/IGImg05.jpg" /></a>
+                        <a href="https://www.instagram.com/daniella_and_gemma/"><img src="~/Assets/images/HomePage/IGImg05.jpg" /></a>
                     </li>
                     <li>
-                        <a href="#"><img src="~/Assets/images/HomePage/IGImg06.jpg" /></a>
+                        <a href="https://www.instagram.com/daniella_and_gemma/"><img src="~/Assets/images/HomePage/IGImg06.jpg" /></a>
                     </li>
                 </ul>
             </div>
